--- a/index2.html
+++ b/index2.html
@@ -155,7 +155,7 @@
                             <img src="imageSlide/nobackground_5.png"
                                 class="absolute block max-w-sm -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2"
                                 alt="CTC Made Machine Part">
-                        </div> 
+                        </div>
                         <div class="hidden duration-700 ease-in-out" data-carousel-item>
                             <img src="imageSlide/nobackground_6.png"
                                 class="absolute block max-w-sm -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2"
@@ -249,7 +249,8 @@
                 <div
                     class="flex justify-center lg:justify-start items-center lg:flex items-center lg:block lg:max-w-xlg h-full lg:relative">
                     <img src="images/IMG_3395.jpg" alt="The Tormach Machine"
-                        class="rounded-xl shadow-lg ring-1 ring-gray-400/10 w-full lg:w-96 lg:h-auto object-cover " style="max-height: 850px;" />
+                        class="rounded-xl shadow-lg ring-1 ring-gray-400/10 w-full lg:w-96 lg:h-auto object-cover "
+                        style="max-height: 850px;" />
                 </div>
             </div>
         </div>
@@ -389,7 +390,7 @@
     <div class="space-y-6 pb-12 px-8  md:px-24 lg:px-48">
         <div class="mx-auto max-w-none xl:grid xl:grid-cols-3 gap-6">
             <div class="col-span-1 flex flex-col justify-start">
-                <h2 class="text-2xl font-bold tracking-tight text-gray-900 sm:text-3xl">Meet our Team</h2>
+                <h2 class="text-2xl font-bold tracking-tight text-gray-900 sm:text-3xl">Meet Our Team</h2>
                 <p class="mt-6 pb-6 text-lg leading-8 text-gray-600">We are a small, dynamic team, profoundly
                     passionate
                     about what we do.
@@ -414,6 +415,22 @@
             </div>
         </div>
     </div>
+
+    <!-- All Rights Reserved -->
+    <footer>
+        <div class=" px-8  pb-12 md:px-24 lg:px-48 flex flex-col justify-center overflow-hidden">
+
+            <div class="border-t pt-12 border-gray-900/10 flex flex-col items-center justify-center">
+                <div class="overflow-hidden flex pb-6 ">
+                    <img src="images/logopng.png" class="h-6 lg:h-10 w-auto" alt="CTC Machining Logo">
+                </div>
+                <p class="text-lg leading-8 text-gray-600 flex ">
+                    &#169; 2024 CTC Machining. All rights reserved.
+                </p>
+            </div>
+
+        </div>
+    </footer>
 
     <script src="//cdnjs.cloudflare.com/ajax/libs/validate.js/0.13.1/validate.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.2.1/flowbite.min.js"></script>
