--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                                 </svg>
                             </button>
                         </div>
-                        <div class="absolute left-0 z-10 mt-2 w-56 origin-top-right rounded-md bg-white shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none"
+                        <div class="hidden absolute left-0 z-10 mt-2 w-56 origin-top-right rounded-md bg-white shadow-lg ring-1 ring-black ring-opacity-5 focus:outline-none"
                             role="menu" aria-orientation="vertical" aria-labelledby="menu-button" tabindex="-1"
                             id="dropdown-menu">
                             <div class="py-1" role="none">
